--- a/transporte.html
+++ b/transporte.html
@@ -60,7 +60,7 @@
 	<div style="height:0px; padding:0px; background-color:white;" class="buscador">
         
         </div>
-	<div role="main" class="ui-content">
+	<div role="main" id="panelSeguimiento" class="ui-content">
    
    
      <div style="font-weight:bold; padding-bottom:5px;">
