--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <div data-role="footer" data-position="fixed">
 		<div data-role="navbar" data-iconpos="top">
 		<ul>
+        <li><a id="btnConfig" href="configuracion.html" data-ajax="false" data-icon="gear">Configurar</a></li>	
 			<li><a onClick="exitFromApp();" data-icon="back">Salir</a></li>
 		</ul>
 	</div><!-- /navbar -->
