--- a/transporte.html
+++ b/transporte.html
@@ -151,7 +151,7 @@
     <div data-role="footer" data-position="fixed">
 		<div data-role="navbar" data-iconpos="top">
 		<ul>
-        	<li><a id="btnConfig" href="configuracion.html" data-ajax="false" data-icon="gear">Configurar</a></li>	
+        	<!--<li><a id="btnConfig" href="configuracion.html" data-ajax="false" data-icon="gear">Configurar</a></li>	-->
         
 			
             <li><a href="index.html" data-ajax="false" data-icon="back">Regresar</a></li>		
