--- a/configuracion.html
+++ b/configuracion.html
@@ -101,7 +101,7 @@
 		<div data-role="navbar" data-iconpos="top">
 		<ul>
 			<li><a id="btnConfirmar" data-icon="check">Confirmar</a></li>	       
-			<li><a id="btnRegresar" href="transporte.html" data-ajax="false" data-icon="back">Regresar</a></li>
+			<li><a id="btnRegresar" href="index.html" data-ajax="false" data-icon="back">Regresar</a></li>
 		</ul>
 	</div><!-- /navbar -->
 	</div>
